Fix errors occurring in full uninstall on macOS
Maintenance Tool can be retrieved from online repositories like any
other component. The component contains files which are listed to remove
correct files in uninstall. As Maintenance Tool differs a bit from other
components in the matter that it should not be deleted in full uninstall as
it is running, we need to exclude the Maintenance Tool (which we call
also installerbasebinary), from the file list. Maintenance Tool itself
is removed in PackageManagerCorePrivate::deleteMaintenanceTool()

Task-number: QTIFW-2875
Change-Id: I33a16e632e3b354099b749d8dde7b65f5cef8f43
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/tests/auto/installer/extractarchiveoperationtest/data.qrc
+++ b/tests/auto/installer/extractarchiveoperationtest/data.qrc
@@ -11,5 +11,8 @@
         <file>data/xmloperationrepository/A/1.0.0content4.zip</file>
         <file>data/xmloperationrepository/A/1.0.0anothercontent.7z</file>
         <file>data/xmloperationrepository/A/1.0.0default.7z</file>
+        <file>data/installerbaserepository/Updates.xml</file>
+        <file>data/installerbaserepository/A/1.0.0content.7z</file>
+        <file>data/installerbaserepository/A/1.0.0installerbase.7z</file>
     </qresource>
 </RCC>
