--- a/tests/auto/installer/settingsoperation/settings.qrc
+++ b/tests/auto/installer/settingsoperation/settings.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>data/repository/Updates.xml</file>
         <file>data/repository/A/1.0.2-1meta.7z</file>
+        <file>data/repository/B/1.0.0meta.7z</file>
+        <file>data/repository/C/1.0.0meta.7z</file>
     </qresource>
 </RCC>
