--- a/tests/auto/installer/contentshaupdate/settings.qrc
+++ b/tests/auto/installer/contentshaupdate/settings.qrc
@@ -5,10 +5,16 @@
         <file>data/repository/componentB/1.0.0content.7z</file>
         <file>data/repository/componentC/1.0.0content.7z</file>
         <file>data/repository/componentD/1.0.0content.7z</file>
+        <file>data/repositoryWithEssential/Updates.xml</file>
+        <file>data/repositoryWithEssential/componentA/1.0.0content.7z</file>
+        <file>data/repositoryWithEssential/componentEssential/2.0.0content.7z</file>
         <file>data/repositoryUpdate/Updates.xml</file>
         <file>data/repositoryUpdate/componentA/0.1.0content.7z</file>
         <file>data/repositoryUpdate/componentB/0.1.0content.7z</file>
         <file>data/repositoryUpdate/componentC/2.0.0content.7z</file>
         <file>data/repositoryUpdate/componentD/2.0.0content.7z</file>
+        <file>data/repositoryUpdateWithEssential/Updates.xml</file>
+        <file>data/repositoryUpdateWithEssential/componentA/0.1.0content.7z</file>
+        <file>data/repositoryUpdateWithEssential/componentEssential/1.0.0content.7z</file>
     </qresource>
 </RCC>
