Optimize Updates.xml parsing
Updates.xml was downloaded first to TEMP/MaintenanceTool.xml and from
there renamed to TEMP/remoterepo-XXXXX/Updates.xml. This is quite time
consuming operation in Windows. Fixed so that the Updates.xml is
downloaded directly to TEMP/remoterepo-XXXXX. This change speeds up
Updates.xml parsing around 70 percent in Windows.

Task-number: QTIFW-2805
Change-Id: I1cb282beb2ce2648f5b0e43919800c92465538b4
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/tests/auto/installer/metadatajob/settings.qrc
+++ b/tests/auto/installer/metadatajob/settings.qrc
@@ -3,5 +3,7 @@
         <file>data/repository/Updates.xml</file>
         <file>data/repositoryActionAdd/Updates.xml</file>
         <file>data/repositoryActionRemove/Updates.xml</file>
+        <file>data/repositoryZipped/repositoryZipped.7z</file>
+        <file>data/repository7zInvalidMetaSha1/repository7zInvalidMetaSha1.7z</file>
     </qresource>
 </RCC>
