Fix progressbar translation
No need to translate cache progressbar format

Change-Id: I686eb578ead27886f1abdb14e45fa1ee58cdcea6
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/src/sdk/settingsdialog.ui
+++ b/src/sdk/settingsdialog.ui
@@ -335,7 +335,7 @@
           <number>-1</number>
          </property>
          <property name="format">
-          <string>%p%</string>
+          <string notr="true">%p%</string>
          </property>
         </widget>
        </item>
