Add support for optional alias dependencies
In addition to RequiresComponent and RequiresAlias, introduce new
OptionalComponent and OptionalAlias properties for component aliases.
The new properties are used to declare optional requirements for
aliases, which do not cause the declaring alias to become unstable in
case the referred component or alias is missing from the installer.

Task-number: QTIFW-3166
Change-Id: I43c8cd08099e879180ec7e028b55836750c727bd
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/componentalias/settings.qrc
+++ b/tests/auto/installer/componentalias/settings.qrc
@@ -3,6 +3,7 @@
         <file>data/repository/Updates.xml</file>
         <file>data/aliases-priority.xml</file>
         <file>data/aliases-versions.xml</file>
+        <file>data/aliases-optional.xml</file>
         <file>metadata/installer-config/config.xml</file>
         <file>metadata/installer-config/aliases.xml</file>
     </qresource>
