--- a/tests/auto/installer/repository/settings.qrc
+++ b/tests/auto/installer/repository/settings.qrc
@@ -2,6 +2,9 @@
     <qresource prefix="/">
         <file>data/repository/Updates.xml</file>
         <file>data/repository/A/1.0.2content.7z</file>
+        <file>data/repository/A/1.0.2meta.7z</file>
+        <file>data/repository/B/1.0.0meta.7z</file>
+        <file>data/repository/C/1.0.0meta.7z</file>
         <file>data/compressedRepository/compressedRepository.7z</file>
     </qresource>
 </RCC>
