Add support for JSON formatted component alias source files
The JSON formatted source file follows the same properties as
the officially supported XML declaration file. The undocumented
(private) file format support is added for installers extended
via the ProductKeyCheck API, that can use the JSON format.

Task-number: QTIFW-3175
Change-Id: If1463a1e3796b818feb8682d66e443e09fefcf15
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/tests/auto/installer/componentalias/settings.qrc
+++ b/tests/auto/installer/componentalias/settings.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>data/repository/Updates.xml</file>
+        <file>data/aliases.json</file>
         <file>data/aliases-priority.xml</file>
         <file>data/aliases-versions.xml</file>
         <file>data/aliases-optional.xml</file>
