Add search image to search -field
Added a search image to a search field in the component selection page.

Change-Id: I7eb0723f0dc8d196f1984bf716a02ab650a53f2a
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/src/libs/installer/resources/installer.qrc
+++ b/src/libs/installer/resources/installer.qrc
@@ -7,6 +7,8 @@
         <file>uninstall.png</file>
         <file>keepinstalled.png</file>
         <file>keepuninstalled.png</file>
+        <file>search.png</file>
+        <file>search@2x.png</file>
         <file>qt/etc/qt.conf</file>
     </qresource>
 </RCC>
